--- a/SwiftUI_FetchAPI_Maps/SwiftUI_FetchAPI_Maps/Info.plist
+++ b/SwiftUI_FetchAPI_Maps/SwiftUI_FetchAPI_Maps/Info.plist
@@ -29,8 +29,6 @@
 			<key>UIWindowSceneSessionRoleApplication</key>
 			<array>
 				<dict>
-					<key>UILaunchStoryboardName</key>
-					<string>LaunchScreen</string>
 					<key>UISceneConfigurationName</key>
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
@@ -48,6 +46,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
